autotests/syntax-tests/tests/negative/negative78.sref
Name { Name Name , $EENUM Name Name : { } : , : = : = ; = ;
} ; 